@startuml duration_filter
!include ../style.puml
title DurationFilter 클래스 다이어그램

class Worker <<abstract>>
class Token <<data>>
class TokenContext <<data>>
class DurationFilterParam <<data>>
class DurationFilterResult <<data>>

class DurationFilter {
    - __Z_THRESH: dict[str, float]
    + __init__(self, z_thresh: dict<str, float>) : None
    + _can_process(self, context: TokenContext) : DurationFilterParam
    + _process(self, param: DurationFilterParam) : DurationFilterResult
    + _update(self, context: TokenContext, result: DurationFilterResult) : None
}

class DurationFilterParam <<data>> {
    segment_tokens: list[Token]
    language: str | None
    mean: float | None
    std: float | None
    count: int | None
    + {static} from_context(context: TokenContext) : DurationFilterParam
}

class DurationFilterResult <<data>> {
segment_tokens: list[Token]
mean: float
std: float
count: float
+ update_context(self, context: TokenContext) : None
}

class DurationFilterStorage <<data>> {
mean: dict[str, float]
std: dict[str, float]
count: dict[str, int]
+ update(self, recycle: DurationFilterStorage) : None
+ extract(self) : DurationFilterStorage
}

DurationFilterParam --> TokenContext
DurationFilterParam --> Token
DurationFilterResult --> TokenContext
DurationFilterResult --> Token

DurationFilter --|> Worker
DurationFilter --> DurationFilterParam
DurationFilter --> DurationFilterResult
DurationFilter --> TokenContext

@enduml
